# ASockLib

./: .gitignore  .gitmodules  ASock.hpp  ASockBuffer.hpp  ASockComm.hpp  ASockNix.hpp  ASockWin.hpp  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: asock-config.cmake.in  asockConfig.cmake.in
include/: AClientSocketTCP.hpp  AServerSocketTCP.hpp  ASock.hpp  ASockBase.hpp  CumBuffer.h
include/asock/: asock_ipc_client.hpp  asock_ipc_server.hpp  asock_tcp_client.hpp  asock_tcp_server.hpp  asock_udp_client.hpp  asock_udp_server.hpp
include/asock/internal/: README.txt  asock_buffer.hpp  asock_comm.hpp  asock_nix.hpp  asock_nix_base.hpp  asock_nix_client.hpp  asock_nix_server.hpp  asock_win.hpp  asock_win_base.hpp  asock_win_client.hpp  asock_win_server.hpp
lib/: AClientSocketTCP.cpp  AClientSocketTCP.hpp  AServerSocketTCP.cpp  AServerSocketTCP.hpp  ASockBase.cpp  ASockBase.hpp  CMakeLists.txt  CumBuffer.h
lib/include/: ASock.hpp  CumBuffer.h
lib/src/_nix/: ASock.cpp  CMakeLists.txt
lib/src/win/: ASock.cpp
sample/: CMakeLists.txt  README  client_ipc_comp.cpp  client_ipc_inh.cpp  client_tcp_comp.cpp  client_tcp_eo.cpp  client_tcp_inh.cpp  client_udp_comp.cpp  client_udp_inh.cpp  condvar.hpp  elapsed_time.hpp  msg_defines.h  server_ipc_comp.cpp  server_ipc_inh.cpp  server_tcp_comp.cpp  server_tcp_eo.cpp  server_tcp_inh.cpp  server_udp_comp.cpp  server_udp_inh.cpp
sample/echo_server/: CMakeLists.txt  README  client.cpp  compile.sh  echo_server.cpp
sample/echo_server/composition/: CMakeLists.txt  client.cpp  echo_server.cpp  msg_defines.h
sample/echo_server/inheritance/: CMakeLists.txt  client.cpp  echo_server.cpp
sample/ipc_echo_example/composition/: CMakeLists.txt  client.cpp  echo_server.cpp  server.cpp
sample/ipc_echo_example/inheritance/: CMakeLists.txt  client.cpp  echo_server.cpp  server.cpp
sample/ipc_echo_server/composition/: CMakeLists.txt  echo_server.cpp
sample/ipc_echo_server/inheritance/: echo_server.cpp
sample/tcp_echo_example/composition/: CMakeLists.txt  client.cpp  echo_server.cpp  server.cpp
sample/tcp_echo_example/inheritance/: CMakeLists.txt  client.cpp  echo_server.cpp  server.cpp
sample/tcp_echo_server/composition/: CMakeLists.txt  client.cpp  echo_server.cpp
sample/tcp_echo_server/inheritance/: client.cpp  echo_server.cpp
sample/tcp_send_each_other_example/: CMakeLists.txt  client.cpp  server.cpp
sample/udp_echo_example/composition/: CMakeLists.txt  client.cpp  echo_server.cpp  server.cpp
sample/udp_echo_example/inheritance/: CMakeLists.txt  client.cpp  echo_server.cpp  server.cpp
src/: AClientSocketTCP.cpp  AClientSocketTCP.hpp  AServerSocketTCP.cpp  ASockBase.cpp  ASockBase.hpp
src/_nix/: AClientSocketTCP.cpp  AServerSocketTCP.cpp  ASock.cpp  ASockBase.cpp  CMakeLists.txt
test/: CMakeLists.txt  asocktest.cpp  buffer_test.cpp  ipc_test.cpp  tcp_test.cpp  udp_test.cpp
test/buffer_test/: CMakeLists.txt  buffer_test.cpp
test/ipc_test/: CMakeLists.txt  ipc_test.cpp
test/tcp_test/: CMakeLists.txt  tcp_test.cpp
test/udp_test/: CMakeLists.txt  udp_test.cpp
